web/projects/portal/src/app/vsobjects/objects/input-label-wrapper/vs-input-label-wrapper.component.scss
/*!
 * This file is part of StyleBI.
 * Copyright (C) 2024  InetSoft Technology
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with this program.  If not, see <https://www.gnu.org/licenses/>.
 */
:host {
  display: inline-block;
}

.vs-input-label-wrapper {
  display: flex;
  width: 100%;
  height: 100%;

  &.label-top {
    flex-direction: column;
  }

  &.label-bottom {
    flex-direction: column-reverse;
  }

  &.label-left {
    flex-direction: row;
    align-items: center;
  }

  &.label-right {
    flex-direction: row-reverse;
    align-items: center;
  }
}

.vs-input-label {
  white-space: nowrap;
  flex-shrink: 0;
  margin: 0;
  padding: 0;
}

.vs-input-content {
  flex: 1;
  min-width: 0;
  min-height: 0;
  position: relative;
  align-self: stretch;
}

